clean up /clerk page

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -9,23 +9,19 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
 
 ## Properties
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [ <code>version</code>, <code>string</code>, "A getter for the Clerk SDK version"]},
-  {cells: [ <code>loaded</code>, <code>boolean</code>, <>A getter to see if the <code>Clerk</code> object is ready for use or not</>]},
-  {cells: [ <code>isSatellite</code>, <code>boolean</code>, "Clerk Flag for satellite apps."]},
-  {cells: [ <code>domain</code>, <code>string</code>, <>A getter for the current Clerk app's domain.<br/>Prefixed with <code>clerk.</code> on production if not already prefixed<br/>Returns <code>""</code> when ran on the server</>]},
-  {cells: [ <code>proxyUrl</code>, <code>string</code>, <>A getter for your Clerk app's proxy URL. Required for applications that run behind a reverse proxy.<br/>Can be either a relative path (<code>/__clerk</code>) or a full URL (<code>{"https://<your-domain>/__clerk"}</code>).</>]},
-  {cells: [ <code>instanceType</code>, <code>'production' | 'development'</code>, "A getter to see the if a Clerk instance is running in production or development mode"]},
-  {cells: [ <code>client</code>, <code><a href="/docs/references/javascript/client">Client</a></code>, <>The <code>Client</code> object for the current window.</>]},
-  {cells: [ <code>session</code>, <code><a href="/docs/references/javascript/session">Session</a> | null | undefined</code>, <>The currently active <code><a href="/docs/references/javascript/session">Session</a></code>, which is guaranteed to be one of the sessions in <code>Client.sessions</code>. If there is no active session, this field will be <code>null</code>. If the session is loading, this field will be <code>undefined</code>.</>]},
-  {cells: [ <code>user</code>, <code><a href="/docs/references/javascript/user/user">User</a> | null | undefined</code>, <>A shortcut to <code>Session.user</code> which holds the currently active <code>User</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
-  {cells: [ <code>organization</code>, <code><a href="/docs/references/javascript/organization/organization">Organization</a> | null | undefined</code>, <>A shortcut to the last active <code>Session.user.organizationMemberships</code> which holds an instance of a <code>Organization</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
-  {cells: [ <code>publishableKey</code>, <code>string | undefined</code>, <>Clerk Publishable Key string.</>]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `version` | `string` | A getter for the Clerk SDK version |
+| `loaded` | `boolean` | A getter to see if the `Clerk` object is ready for use or not |
+| `isSatellite` | `boolean` | Clerk Flag for satellite apps |
+| `domain` | `string` | A getter for the current Clerk app's domain.<br />Prefixed with `clerk.` on production if not already prefixed.<br />Returns `""` when ran on the server |
+| `proxyUrl` | `string` | A getter for your Clerk app's proxy URL. Required for applications that run behind a reverse proxy.<br />Can be either a relative path (`/__clerk`) or a full URL (`https://<your-domain>/__clerk`). |
+| `instanceId` | `'production' \| 'development'` | A getter to see the if a Clerk instance is running in production or development mode |
+| `client` | [`Client`][client-ref] | The [`Client`][client-ref] object for the current window. |
+| `session` | [`Session`][session-ref] \| `null` \| `undefined` | The currently active [`Session`][session-ref], which is guaranteed to be one of the sessions in `Client.sessions`. If there is no active session, this field will be `null`. If the session is loading, this field will be `undefined`. |
+| `user` | [`User`][user-ref] \| `null` \| `undefined` | A shortcut to `Session.user` which holds the currently active [`User`][user-ref] object. If the session is `null` or `undefined`, the user field will match. |
+| `organization` | [`Organization`][organization-ref] \| `null` \| `undefined` | A shortcut to the last active `Session.user.organizationMemberships` which holds an instance of a [`Organization`][organization-ref] object. If the session is `null` or `undefined`, the user field will match. |
+| `publishableKey` | `string \| undefined` | The publishable key from your Clerk Dashboard, used to connect to Clerk |
 
 ## Methods
 
@@ -37,58 +33,25 @@ class Clerk {
 }
 ```
 
-Create an instance of the Clerk class with dedicated options.
+Create an instance of the `Clerk` class with dedicated options.
 
-> This method is only available when importing Clerk from `@clerk/clerk-js`, rather than using a Window script.
+> This method is only available when importing `Clerk` from `@clerk/clerk-js`, rather than using a Window script.
 
 #### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>key</code>,
-  <code>string</code>,
-  <>The publishable key from your Clerk Dashboard, used to connect to Clerk</>,
-  ],
-  },
-  {
-  cells: [
-  <code>options</code>,
-  <code><a href="/docs/references/javascript/clerk/clerk#domain-or-proxy-url">DomainOrProxyUrl</a> | undefined</code>,
-  <>The domain or proxy URL used to connect to Clerk</>,
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `key` | `string` | The publishable key from your Clerk Dashboard, used to connect to Clerk |
+| `options` | [`DomainOrProxyUrl`](#domain-or-proxy-url) \| `undefined` | The domain or proxy URL used to connect to Clerk |
 
 #### `DomainOrProxyUrl`
 
 Only one of the two properties are allowed to be set at a time.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>proxyUrl</code>,
-  <code>{"never | string | ((url: URL) => string)"}</code>,
-  <>The proxyUrl used to connect to Clerk. If a function, will be called with a <code>URL</code> made from <code>window.location.href</code></>,
-  ],
-  },
-  {
-  cells: [
-  <code>domain</code>,
-  <code>{"never | string | ((url: URL) => string)"}</code>,
-  <>The domain used to connect to Clerk. If a function, will be called with a <code>URL</code> made from <code>window.location.href</code></>,
-  ],
-  },
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `proxyUrl` | `never \| string \| ((url: URL) => string)` | The proxyUrl used to connect to Clerk. If a function, will be called with a `URL` made from `window.location.href` |
+| `domain` | `never \| string \| ((url: URL) => string)` | The domain used to connect to Clerk. If a function, will be called with a `URL` made from `window.location.href` |
 
 ### `isReady()`
 
@@ -96,23 +59,14 @@ Only one of the two properties are allowed to be set at a time.
 function isReady(): boolean;
 ```
 
-Returns `true` when the [ClerkJS](/docs/references/javascript/overview) library has fully loaded and the `Clerk` object is ready for use. Returns `false` otherwise.
+Indicates when the [ClerkJS](/docs/references/javascript/overview) library has fully loaded and the `Clerk` object is ready for use.
 
 #### Returns
 
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>{"boolean"}</code>,
-  <>This method will return <code>true</code> when the Clerk object is ready, <code>false</code> otherwise.</>,
-  ]},
-  ]}
-/>
-
-
+| Type | Description |
+| --- | --- |
+| `boolean` | Returns `true` when the `Clerk` object is ready. Returns `false` otherwise. |
 
 ### `load()`
 
@@ -120,125 +74,29 @@ Returns `true` when the [ClerkJS](/docs/references/javascript/overview) library 
 function load(options?: ClerkOptions): Promise<void>;
 ```
 
-Initializes the `Clerk` object and loads all necessary environment configuration and Instance settings from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference).
+Initializes the `Clerk` object and loads all necessary environment configuration and instance settings from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference).
 
 It is absolutely necessary to call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](/docs/quickstarts/javascript) guide for more details.
 
 #### `ClerkOptions`
 
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>appearance</code>,
-  <code>Appearance | undefined</code>,
-  <>Optional object to style your Components. Will only affect Clerk Components and not Account Portal pages.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>localization</code>,
-  <code>Localization | undefined</code>,
-  <>Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>navigate</code>,
-  <code>{"((to: string) => Promise<unknown> | unknown) | undefined"}</code>,
-  <>A function which takes the destination path as an argument and performs a "push" navigation.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>polling</code>,
-  <code>boolean | undefined</code>,
-  <>Dictates if we should poll against Clerk's backend every 5 minutes. Defaults to <code>true</code></>,
-  ],
-  },
-  {
-  cells: [
-  <code>selectInitialSession</code>,
-  <code>((client: <a href="/docs/references/javascript/client">Client</a>) {"=>"} <a href="/docs/references/javascript/session">Session</a> | null) | undefined</code>,
-  <>An optional function which allows you to control which active session is the initial session to base a user's state off of. Defaults to the first session in the client's sessions array.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>standardBrowser</code>,
-  <code>boolean | undefined</code>,
-  <>Controls if ClerkJS will load with the standard browser set up using Clerk cookies. Defaults to <code>true</code></>,
-  ],
-  },
-  {
-  cells: [
-  <code>supportEmail</code>,
-  <code>string | undefined</code>,
-  <>Optional support email for display in authentication screens</>,
-  ],
-  },
-  {
-  cells: [
-  <code>touchSession</code>,
-  <code>boolean | undefined</code>,
-  <>Indicates whether the session should be "touched" when user interactions occur, used to record these interactions. Defaults to <code>true</code></>,
-  ],
-  },
-  {
-  cells: [
-  <code>signInUrl</code>,
-  <code>string | undefined</code>,
-  <>The default URL to use to direct to when the user signs in.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>signUpUrl</code>,
-  <code>string | undefined</code>,
-  <>The default URL to use to direct to when the user signs up.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>afterSignInUrl</code>,
-  <code>string | undefined</code>,
-  <>The default URL to use after the user signs in.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>afterSignUpUrl</code>,
-  <code>string | undefined</code>,
-  <>The default URL to use after the user signs up.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>allowedRedirectOrigins</code>,
-  <code>{"Array<string | RegExp> | undefined"}</code>,
-  <>Optional array of domains used to validate against the query param of an auth redirect.<br />If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>isInterstitial</code>,
-  <code>boolean | undefined</code>,
-  <>Indicates that clerk.js is will be loaded from interstitial. Defaults to <code>false</code></>,
-  ],
-  },
-  {
-  cells: [
-  <code>isSatellite</code>,
-  <code>boolean | {"((url: URL) => boolean)"} | undefined</code>,
-  <>Clerk Flag for satellite apps. Experimental.</>,
-  ],
-  },
-  ]}
-/>
-
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `localization` | <code>[Localization](/docs/components/customization/localization) \| undefined</code> | Optional object to localize your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `navigate` | `((to: string) => Promise<unknown> \| unknown) \| undefined` | A function which takes the destination path as an argument and performs a "push" navigation. |
+| `polling` | `boolean \| undefined` | Dictates if we should poll against Clerk's backend every 5 minutes. Defaults to `true` |
+| `selectInitialSession` | <code>((client: [Client][client-ref]) => Session \| null) \| undefined</code> | An optional function which allows you to control which active session is the initial session to base a user's state off of. Defaults to the first session in the client's sessions array. |
+| `standardBrowser` | `boolean \| undefined` | Controls if ClerkJS will load with the standard browser set up using Clerk cookies. Defaults to `true` |
+| `supportEmail` | `string \| undefined` | Optional support email for display in authentication screens |
+| `touchSession` | `boolean \| undefined` | Indicates whether the session should be "touched" when user interactions occur, used to record these interactions. Defaults to `true` |
+| `signInUrl` | `string \| undefined` | The default URL to use to direct to when the user signs in. |
+| `signUpUrl` | `string \| undefined` | The default URL to use to direct to when the user signs up. |
+| `afterSignInUrl` | `string \| undefined` | The default URL to use after the user signs in. |
+| `afterSignUpUrl` | `string \| undefined` | The default URL to use after the user signs up. |
+| `allowedRedirectOrigins` | `Array<string \| RegExp> \| undefined` | Optional array of domains used to validate against the query param of an auth redirect.<br />If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
+| `isInterstitial` | `boolean \| undefined` | Indicates that Clerk.js will be loaded from interstitial. Defaults to `false` |
+| `isSatellite` | `boolean \| ((url: URL) => boolean) \| undefined` | Clerk Flag for satellite apps. Experimental. |
 
 ### `signOut()`
 
@@ -252,19 +110,9 @@ Signs out the active user from all sessions in a [multi-session application](/do
 
 #### `SignOutOptions`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>sessionId</code>,
-  <code>string | undefined</code>,
-  <>Specify a specific session to sign out. Useful for multi-session applications.</>,
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `sessionId` | `string \| undefined` | Specify a specific session to sign out. Useful for multi-session applications. |
 
 ### `addListener()`
 
@@ -272,28 +120,24 @@ Signs out the active user from all sessions in a [multi-session application](/do
 function addListener(listener: ((emission: Resources) => void)): UnsubscribeCallback;
 ```
 
-Registers a listener that triggers a callback whenever a change in the `Client`, `Session`, or `User` object occurs. This method is primary used to build frontend SDKs like [@clerk/clerk-react](https://www.npmjs.com/package/@clerk/clerk-react).
+Registers a listener that triggers a callback whenever a change in the [`Client`][client-ref], [`Session`][session-ref], or [`User`][user-ref] object occurs. This method is primary used to build frontend SDKs like [@clerk/clerk-react](https://www.npmjs.com/package/@clerk/clerk-react).
 
 #### `Resources`
 
 
-<Tables
-  headings={["Name", "Type"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [<code>client</code>, <code><a href="/docs/references/javascript/client">Client</a></code>]},
-  {cells: [<code>session</code>, <code><a href="/docs/references/javascript/session">Session</a> | undefined | null</code>]},
-  {cells: [<code>user</code>, <code>User | undefined | null</code>]},
-  {cells: [<code>organization</code>, <code><a href="/docs/references/javascript/organization/organization">Organization</a> | undefined | null</code>]},
-  {cells: [<code>lastOrganizationInvitation</code>, <code><a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a> | undefined | null</code>]},
-  {cells: [<code>lastOrganizationMember</code>, <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a> | undefined | null</code>]},
-  ]}
-/>
+| Name | Type | 
+| --- | --- |
+| `client` | [`Client`][client-ref] |
+| `session` | [`Session`][session-ref] \| `null` \| `undefined` |
+| `user` | [`User`][user-ref] \| `null` \| `undefined` |
+| `organization` | [`Organization`][organization-ref] \| `null` \| `undefined` |
+| `lastOrganizationInvitation` | [`OrganizationInvitation`](/docs/references/javascript/organization-invitation) \| `null` \| `undefined` |
+| `lastOrganizationMember` | [`OrganizationMembership`](/docs/references/javascript/organization-membership) \| `null` \| `undefined` |
 
 <Callout>
-Please note that the `session` and `user` object have a special relationship that the type definition alone does not capture:
-- When there is an active session, `user === session.user`. When there is no active session, `user` and `session` will both be `null`.
-- When a session is loading, `user` and `session` will be `undefined`.
+  Please note that the [`Session`][session-ref] and [`User`][user-ref] object have a special relationship that the type definition alone does not capture:
+    - When there is an active session, `user === session.user`. When there is no active session, [`User`][user-ref] and [`Session`][session-ref] will both be `null`.
+    - When a session is loading, [`User`][user-ref] and [`Session`][session-ref] will be `undefined`.
 </Callout>
 
 #### Returns
@@ -316,33 +160,11 @@ function authenticateWithMetamask({
 
 #### `AuthenticateWithMetamaskParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>redirectUrl</code>,
-  <code>string | undefined</code>,
-  <>Full URL or path to navigate after successful sign in or sign up.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>signUpContinueUrl</code>,
-  <code>string | undefined</code>,
-  <>The location to continue navigation to in the sign up process if data is missing.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>customNavigate</code>,
-  <code>({"(to: string) => Promise<unknown>"}) | undefined</code>,
-  <>Allows you to define a custom navigation function</>,
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl` | `string \| undefined` | Full URL or path to navigate after successful sign in or sign up. |
+| `signUpContinueUrl` | `string \| undefined` | The location to continue navigation to in the sign up process if data is missing. |
+| `customNavigate` | `((to: string) => Promise<unknown> \| unknown) \| undefined` | Allows you to define a custom navigation function |
 
 ## Components
 
@@ -400,3 +222,10 @@ In addition to the methods listed above, the `Clerk` class also has the followin
 
 - [`setSession()`](/docs/references/javascript/clerk/session-methods#set-session)
 - [`setActive()`](/docs/references/javascript/clerk/session-methods#set-active)
+
+[client-ref]: /docs/references/javascript/client
+[session-ref]: /docs/references/javascript/session
+[user-ref]: /docs/references/javascript/user/user
+[organization-ref]: /docs/references/javascript/organization/organization
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
