fix h1's of pages for better SEO and clarity

--- a/docs/integrations/analytics/google-analytics.mdx
+++ b/docs/integrations/analytics/google-analytics.mdx
@@ -1,9 +1,9 @@
 ---
-title: Google Analytics
+title: Enable Google Analytics for Clerk
 description: Enable Clerk with Google Analytics to authenticate requests to your application.
 ---
 
-# Google Analytics
+# Enable Google Analytics for Clerk
 
 This integration enables Clerk to send user authentication events to the configured Google Analytics property which corresponds to your application.
 
