--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -1,9 +1,9 @@
 ---
-title: Convex
+title: Integrate Convex with Clerk
 description: Learn how to integrate Clerk into your Convex application.
 ---
 
-# Getting started
+# Integrate Convex with Clerk
 
 Navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Convex.
 
