--- a/docs/integrations/databases/fauna.mdx
+++ b/docs/integrations/databases/fauna.mdx
@@ -1,9 +1,9 @@
 ---
-title: Fauna
+title: Integrate Fauna with Clerk
 description: Learn how to integrate Clerk into your Fauna application.
 ---
 
-# Getting started
+# Integrate Fauna with Clerk
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
