--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -1,9 +1,9 @@
 ---
-title: Firebase
+title: Integrate Firebase with Clerk
 description: Learn how to integrate Clerk into your Firebase application.
 ---
 
-# Getting started
+# Integrate Firebase with Clerk
 
 To enable Firebase integration with your Clerk application, you will need to provide Clerk with the required Firebase configuration attributes depending on the Firebase features you would require authenticated user access to.
 
