--- a/docs/integrations/databases/grafbase.mdx
+++ b/docs/integrations/databases/grafbase.mdx
@@ -1,9 +1,9 @@
 ---
-title: Grafbase
+title: Integrate Grafbase with Clerk
 description: Learn how to integrate Clerk and Grafbase into your application
 ---
 
-# Getting started
+# Integrate Grafbase with Clerk
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
