--- a/docs/integrations/databases/nhost.mdx
+++ b/docs/integrations/databases/nhost.mdx
@@ -1,9 +1,9 @@
 ---
-title: Nhost
+title: Integrate Nhost with Clerk
 description: Learn how to integrate Clerk into your Nhost project.
 ---
 
-# Getting started
+# Integrate Nhost with Clerk
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
