--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -7,13 +7,13 @@ description: The <SignIn /> component renders a UI for signing in users. The fun
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
-The `<SignIn />` component renders a UI for signing in users. The functionality of the `<SignIn />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn />` component by passing additional properties at the time of rendering.
+The [`<SignIn />`][signin-ref] component renders a UI for signing in users. The functionality of the [`<SignIn />`][signin-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your [`<SignIn />`][signin-ref] component by passing additional properties at the time of rendering.
 
 > All of these are methods on [an instance of the `Clerk` class](/docs/references/javascript/clerk/clerk).
 
 ## `mountSignIn()`
 
-Render the `<SignIn />` component to an HTML `<div>` element.
+Render the [`<SignIn />`][signin-ref] component to an HTML `<div>` element.
 
 ### Usage
 
@@ -72,12 +72,12 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element used to render in the `<SignIn />` component |
-| `props?` | [`SignInProps`](#sign-in-props) | The properties to pass to the `<SignIn />` component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element used to render in the [`<SignIn />`][signin-ref] component |
+| `props?` | [`SignInProps`](#sign-in-props) | The properties to pass to the [`<SignIn />`][signin-ref] component |
 
 ## `unmountSignIn()`
 
-Unmount and run cleanup on an existing `<SignIn />` component instance.
+Unmount and run cleanup on an existing [`<SignIn />`][signin-ref] component instance.
 
 ### Usage
 
@@ -244,9 +244,11 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
 | `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
 | `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
+
+[signin-ref]: /docs/components/authentication/sign-in
