--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -91,29 +91,8 @@ export default function Index() {
 
 ## Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-    {
-      cells: [
-        <code>redirectUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignInUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign in.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignUpUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign up.</>,
-      ],
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
