--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -181,30 +181,8 @@ You can create a custom button by wrapping your own button, or button text, in t
 
 ## Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'}, {maxWidth:'300px'}, {maxWidth:'300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>signOutCallback?</code>, 
-        <code>{`() => (void | Promise<any>)`}</code>, 
-        <>A promise to handle after the sign out has successfully happened.</> 
-      ]
-    },
-    {
-      cells: [
-        <code>children?</code>, 
-        <code>React.ReactNode</code>, 
-        <>children you want to wrap the sign out button in.</>
-      ]
-    },
-    {
-      cells: [
-        <code>signOutOptions?</code>, 
-        <code>SignOutOptions</code>, 
-        <>Object that current has a <code>sessionId</code> property. The <code>sessionId</code> can be passed in to sign out a specific session, which is useful for multisession applications.</>
-      ]
-    }
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `signOutCallback?` | <code>{`() => (void \| Promise<any>)`}</code> | A promise to handle after the sign out has successfully happened. |
+| `children?` | `React.ReactNode` | children you want to wrap the `<SignOutButton />` in. |
+| `signOutOptions?` | `SignOutOptions` | Object that has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications. |
