--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -97,65 +97,15 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>appearance</code>,
-        <code>object</code>,
-        <>Controls the overall look and feel of the component. See <a href="/docs/components/customization/overview">Appearance</a> for more information.</>,
-      ]
-    },
-    {
-      cells: [
-        <code>routing</code>,
-        <code>string</code>,
-        <>The routing strategy for your pages. Supported values are:
-          <ul>
-            <li>hash (default): Hash-based routing.</li>
-            <li>path: Path-based routing.</li> 
-            <li>virtual: Virtual-based routing.</li>
-          </ul>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>path</code>,
-        <code>string</code>,
-        <>The path where the component is mounted on when path-based routing is used e.g. /sign-up.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>redirectUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate to after successful sign in or sign up.
-        <br/>The same as setting afterSignInUrl and afterSignUpUrl to the same value.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignInUrl</code>,
-        <code>string</code>,
-        <>The full URL or path to navigate to after a successful sign in.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>signInUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignUpUrl</code>,
-        <code>string</code>,
-        <>The full URL or path to navigate after a successful sign up.</>,
-      ],
-    },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
+| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
