--- a/docs/components/customization/variables.mdx
+++ b/docs/components/customization/variables.mdx
@@ -3,10 +3,6 @@ title: Variables
 description: Utilize Clerk's variables property in order to adjust the general styles of the component's base theme, like colors, backgrounds, typography.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Variables
 
 The variables property is used to adjust the general styles of the component's base theme, like colors, backgrounds, typography.
@@ -28,100 +24,22 @@ import { ClerkProvider } from '@clerk/nextjs';
 
 ## Properties
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {
-  cells: [
-  <code>colorPrimary</code>,
-  <code>string</code>,
-  "The primary color used throughout the components",
-  ],
-  },
-  { cells: [<code>colorDanger</code>, 
-  <code>string</code>,"The color used for error states"] },
-  { cells: [<code>colorSuccess</code>, 
-  <code>string</code>,"The color used for success states"] },
-  { cells: [<code>colorWarning</code>, 
-  <code>string</code>,"The color used for warning states"] },
-  {
-  cells: [
-  <code>colorAlphaShade</code>,
-  <code>string</code>,
-  "The color that will be used for all to generate the alpha shades the components use. This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
-  ],
-  },
-  {
-  cells: [
-  <code>colorTextOnPrimaryBackground</code>,
-  <code>string</code>,
-  "The color used for text on the primary background",
-  ],
-  },
-  { cells: [<code>colorTextSecondary</code>, 
-  <code>string</code>,"The color used for secondary text"] },
-  {
-  cells: [<code>colorBackground</code>,
-  <code>string</code>, "The background color for the card container"],
-  },
-  { cells: [<code>colorInputText</code>, 
-  <code>string</code>,"The color used for text in input fields"] },
-  {
-  cells: [
-  <code>colorInputBackground</code>,
-  <code>string</code>,
-  "The background color used for input fields",
-  ],
-  },
-  {
-  cells: [
-  <code>fontFamily</code>,
-  <code>string</code>,
-  "The font family used throughout the components. By default, it is inherited.",
-  ],
-  },
-  {
-  cells: [
-  <code>fontFamilyButtons</code>,
-  <code>string</code>,
-  "The font family used for buttons. By default, it is inherited.",
-  ],
-  },
-  {
-  cells: [
-  <code>fontSize</code>,
-  <code>string</code>,
-  "The font size used throughout the components. By default, this is set to 1rem.",
-  ],
-  },
-  {
-  cells: [
-  <code>fontSmoothing</code>,
-  <code>'auto' | 'antialiased' | 'never'</code>,
-  "The font smoothing used throughout the components. By default, this is set to auto.",
-  ],
-  },
-  {
-  cells: [
-  <code>fontWeight</code>,
-  <code>{"{normal: number, medium: number, bold: number}"}</code>,
-  "The font weight used throughout the components. By default, this is set to {normal: 400, medium: 500, bold: 600}",
-  ],
-  },
-  {
-  cells: [
-  <code>borderRadius</code>,
-    <code>string</code>,
-  "The border radius used throughout the components. By default, this is set to 0.375rem",
-  ],
-  },
-  {
-  cells: [
-  <code>spacingUnit</code>,
-    <code>string</code>,
-  "The spacing unit used throughout the components. By default, this is set to 1rem.",
-  ],
-  },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `colorPrimary` | `string` | The primary color used throughout the components |
+| `colorDanger` | `string` | The color used for error states |
+| `colorSuccess` | `string` | The color used for success states |
+| `colorWarning` | `string` | The color used for warning states |
+| `colorAlphaShade` | `string` | The color that will be used for all to generate the alpha shades the components use. This option applies to borders, backgrounds for hovered elements, hovered dropdown options |
+| `colorTextOnPrimaryBackground` | `string` | The color used for text on the primary background |
+| `colorTextSecondary` | `string` | The color used for secondary text |
+| `colorBackground` | `string` | The background color for the card container |
+| `colorInputText` | `string` | The color used for text in input fields |
+| `colorInputBackground` | `string` | The background color used for input fields |
+| `fontFamily` | `string` | The font family used throughout the components. By default, it is inherited. |
+| `fontFamilyButtons` | `string` | The font family used for buttons. By default, it is inherited. |
+| `fontSize` | `string` | The font size used throughout the components. By default, this is set to 1rem. |
+| `fontSmoothing` | `'auto' \| 'antialiased' \| 'never'` | The font smoothing used throughout the components. By default, this is set to auto. |
+| `fontWeight` | `{normal: number, medium: number, bold: number}` | The font weight used throughout the components. By default, this is set to `{normal: 400, medium: 500, bold: 600}` |
+| `borderRadius` | `string` | The border radius used throughout the components. By default, this is set to 0.375rem |
+| `spacingUnit` | `string` | The spacing unit used throughout the components. By default, this is set to 1rem. |
