--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -64,43 +64,12 @@ The `<CreateOrganization />` component is used to render an organization creatio
 
 All props below are optional.
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>afterCreateOrganizationUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after creating a new organization.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>path</code>,
-        <code>string</code>,
-        <>The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>routing</code>,
-        <code>RoutingStrategy</code>,
-        <>The routing strategy for your pages. Supported values are:
-          <ul>
-            <li>hash (default): Hash based routing.</li>
-            <li>path: Path based routing.</li>
-            <li>virtual: Virtual based routing.</li>
-          </ul>
-        </>,
-      ],
-    },
-    {
-      cells: [
-        <code>appearance</code>,
-        <code>object</code>,
-        <>Control the look and feel of the component.</>,
-      ],
-    },
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash-based routing.</li> <li>`path`: Path-based routing.</li> <li>`virtual`: Virtual-based routing.</li></ul> |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+
+[components-ref]: /docs/components/overview
+[ap-ref]: /docs/account-portal/overview
