--- a/docs/components/customization/layout.mdx
+++ b/docs/components/customization/layout.mdx
@@ -1,6 +1,6 @@
 ---
 title: Layout
-description: Utilize Clerk's layout key in order to change the layout of the <SignIn /> and <SignUp /> components, as well as important links to your support, terms and privacy page
+description: Utilize Clerk's layout key in order to change the layout of the <SignIn /> and <SignUp /> components, as well as important links to your support, terms and privacy pages.
 ---
 
 # Layout
