feat: Add initialValues prop for sign in/up to docs (#307)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -5,6 +5,8 @@ description: Learn how to share direct links to your Account Portal pages, and h
 
 # Direct links
 
+## Redirect URL
+
 If a user accesses an Account Portal page *directly*, the `redirect_url` query param will not be present, so the user cannot be redirected back to your application once they are finished with their Account Portal flow. To prevent this, it is recommend that you always specify the redirect in the link when sharing it. 
 
 You can use the following format for your direct links:
@@ -52,3 +54,15 @@ Specify the fallback redirects under the **Redirects** tab on the [Account Porta
 />
 
 </Steps>
+
+## Prefill sign in and sign up fields
+
+In the case of direct links, the values to be used for prefilling the fields for sign-in or sign-up can be specified via the following query parameters:
+
+* `email_address`
+* `phone_number`
+* `username`
+* `first_name`
+* `last_name`
+
+For example, visiting `https://accounts.example.com/sign-in?username=nick` will result in the username field being prefilled with the value `nick`.
