--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -51,17 +51,17 @@ Redirects to the provided url after decorating it with the auth token for develo
 ## `redirectToSignIn()`
 
 ```typescript
-function redirectToSignIn(options?: RedirectOptions): Promise<unknown>;
+function redirectToSignIn(options?: SignInRedirectOptions): Promise<unknown>;
 ```
 
-Redirects to the sign-in URL, as configured in your Instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
+Redirects to the sign-in URL, as configured in your application's instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
 
 
 ### Props
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options to use in the redirect |
+| `options` | [`SignInRedirectOptions`](/docs/references/javascript/types/sign-in-redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
@@ -72,16 +72,16 @@ Redirects to the sign-in URL, as configured in your Instance settings. This meth
 ## `redirectToSignUp()`
 
 ```typescript
-function redirectToSignUp(options?: RedirectOptions): Promise<unknown>;
+function redirectToSignUp(options?: SignUpRedirectOptions): Promise<unknown>;
 ```
 
-Redirects to the sign-up URL, as configured in your Instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
+Redirects to the sign-up URL, as configured in your application's instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
 
 ### Props
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `options` | [`RedirectOptions`](/docs/references/javascript/types/redirect-options) \| `undefined` | Options to use in the redirect |
+| `options` | [`SignUpRedirectOptions`](/docs/references/javascript/types/sign-up-redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
@@ -96,7 +96,7 @@ Redirects to the sign-up URL, as configured in your Instance settings. This meth
 function redirectToUserProfile(): Promise<unknown>;
 ```
 
-Redirects to the user profile management URL, as configured in your Instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
+Redirects to the user profile management URL, as configured in your application's instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
 
 ### Returns
 
@@ -110,7 +110,7 @@ Redirects to the user profile management URL, as configured in your Instance set
 function redirectToCreateOrganization(): Promise<unknown>;
 ```
 
-Redirects to the configured URL where <code><a href="/docs/references/javascript/clerk/create-organization">{"<CreateOrganization />"}</a></code> is mounted. This method uses the [`navigate()`](#navigate) method under the hood.
+Redirects to the configured URL where [`<CreateOrganization />`](/docs/references/javascript/clerk/create-organization) is mounted. This method uses the [`navigate()`](#navigate) method under the hood.
 
 ### Returns
 
@@ -124,7 +124,7 @@ Redirects to the configured URL where <code><a href="/docs/references/javascript
 function redirectToOrganizationProfile(): Promise<unknown>;
 ```
 
-Redirects to the configured URL where <code><a href="/docs/references/javascript/clerk/organization-profile">{"<OrganizationProfile />"}</a></code> is mounted. This method uses the [`navigate()`](#navigate) method under the hood.
+Redirects to the configured URL where [`<OrganizationProfile />`](/docs/references/javascript/clerk/organization-profile) is mounted. This method uses the [`navigate()`](#navigate) method under the hood.
 
 ### Returns
 
@@ -138,7 +138,7 @@ Redirects to the configured URL where <code><a href="/docs/references/javascript
 function redirectToHome(): Promise<unknown>;
 ```
 
-Redirects to your app's homepage, as configured in your Instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
+Redirects to your app's homepage, as configured in your application's instance settings. This method uses the [`navigate()`](#navigate) method under the hood.
 
 ### Returns
 
